# VRaF_Sequencer

./: CMakeLists.txt  LICENSE  README.md  imgui.ini  main.cpp
inc/: VRaFSequencer.h
src/: VRaFSequencer.cpp
